Removing Custom Mentions Button

--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -189,8 +189,7 @@
         "about": "About plugCubed",
         "background": "Change background",
         "chatcustomizations": "Chat Customizations",
-        "customcss": "Custom CSS",
-        "mentions": "Custom Mention Sound"
+        "customcss": "Custom CSS"
     },
     "vote": {
         "meh": "Meh",
