Additional updates for the upcoming release
Rewrote Firefox Extension for WebExtensions. Updated depdendencies and rewrote some of the gulp tasks. Added commands panel to control panel. Added autoclear for userdata. Rewrote Darryan's implementation of chat mention sounds. Added in quick ban / mute (missing icons). Rewrote commands handler, now beginning to add more. Rewrote Darryan's implementation of link in song update so it matches with the UI. Added in a basic impl of user join / leave for friends. Beginning work on stacking plugCubed notifications to avoid spam.

--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -6,12 +6,10 @@
         "disable": "Disable AFK Autorespond to chat",
         "nextIn": "Next AFK Autorespond will be sent from %1",
         "next": "AFK Autorespond on next mention",
-        "commandDisable": "%1 AFK message disabled",
-        "commandNotEnabled": "%1 AFK message was not enabled"
+        "commandDisable": "%1 AFK message disabled"
     },
     "autojoin": {
-        "commandDisable": "%1 autojoin disabled",
-        "commandNotEnabled": "%1 autojoin was not enabled"
+        "commandDisable": "%1 autojoin disabled"
     },
     "fullscreen": {
         "shrink": "Shrink",
