Bug Fixes for update
Removed {info.lastSeen} from who since removed from plug. Fixed the song stats bug, when user skips the songs stats will appened to chat after the skip message. Also fixed song stats not appending into chat when the songs stats where the same last song (p3 tried to add message account). Fixed chat suggestion, now you can navigate through chat suggestions using arrow keys and it now close due to p3 going through chat history.

--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -186,6 +186,7 @@
         "inlineuserinfo": "Inline User Info",
         "about": "About plugCubed",
         "background": "Change background",
+        "commands": "Commands",
         "chatcustomizations": "Chat Customizations",
         "customcss": "Custom CSS"
     },
