Bug Fixes & Features Added
Fixed some menu options to stay checked to what the setting is set to, also fixed all p3 emotes to disable when user disabled all emotes by plug setting, added low lag mode - enables video only, hides badges, toggles all emotes and disables avatars, also added work mode - disabled avatars, changes background to p3 work mode background, disables badges, toggles all emotes, simplefies footer - removes social icons, hides all buttons and only displays username, edit user rollovers to hide avatars, dj-list and friend list avatars hidden.

--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -193,7 +193,9 @@
         "background": "Change background",
         "chatcustomizations": "Chat Customizations",
         "commands": "Chat commands",
-        "customcss": "Custom CSS"
+        "customcss": "Custom CSS",
+        "lowlagMode": "Low Lag Mode",
+        "workMode": "Work Mode"
     },
     "vote": {
         "meh": "Meh",
@@ -203,8 +205,8 @@
         "djing": "DJing"
     },
     "customchatcolors": {
-      "userRanksHeader": "User Ranks",
-      "chatnotifs": "Chat Notifications"
+        "userRanksHeader": "User Ranks",
+        "chatnotifs": "Chat Notifications"
     },
     "panels": {
         "about": {
